--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "jd"
   ],
   "author": "kingvid",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "ejs": "^2.5.2",
     "moment": "^2.15.1",
-    "mongoose": "^4.6.1",
+    "node-mysql": "^0.4.2",
     "node-schedule": "^1.1.1",
     "superagent": "^2.2.0",
     "urlencode": "^1.1.0"
